# tlmbht

./: .gitignore  .gitmodules  Acknowledgment.md  CMakeLists.txt  LICENSE.md  LICENSE.txt  Makefile  README.md  README_future_release.md  a.out  acknowledgment.md  case.tbn  case.tlm  compilation flags.txt  function01  function01.c  history.md  main.c  readme.txt  references.md  tlmcode.md
Matlab/: D2_BHE_f.m  D3_BHE_f.m  D3_BHE_f_old.m  Model_Validation3.ods  Model_Validation3b.ods  README.md  README.txt  calling.m  openmsh.m  parallelepiped_6BC.geo  parallelepiped_6BC_206e.msh  parallelepiped_6BC_69941e.msh  plate_4BC.geo  plate_4BC_40e.tms.mat  plate_4BC_682e.tms.mat  proproc.m
Octave/: calling.m
docs/: About.md  Download.md  Gemfile  _config.yml  index.htlm  index.html  index.md  intex.htlm  licenseCU.md  licenseSite.md  readme.txt
include/: readme.txt
nbproject/: Makefile-CUDA_Debug.mk  Makefile-CUDA_Release.mk  Makefile-Debug.mk  Makefile-Release.mk  Makefile-cuda_debug.mk  Makefile-cuda_release.mk  Makefile-debug.mk  Makefile-impl.mk  Makefile-linux_32.mk  Makefile-linux_64.mk  Makefile-no_flags.mk  Makefile-release.mk  Makefile-release_linux_32.mk  Makefile-release_linux_64.mk  Makefile-release_windows_32.mk  Makefile-release_windows_64.mk  Makefile-variables.mk  Makefile-windows_32.mk  Makefile-windows_64.mk  Package-CUDA_Debug.bash  Package-CUDA_Release.bash  Package-Debug.bash  Package-Release.bash  Package-cuda_debug.bash  Package-cuda_release.bash  Package-debug.bash  Package-linux_32.bash  Package-linux_64.bash  Package-no_flags.bash  project.xml  (+9 more)
(+403 files in other folders)
